@@ -1,4 +1,5 @@
 - fix header clash on MacOS (#11) - thanks @deriamis
+- apply Debian-provided fix for glutTimerFunc (#10) - thanks @kevinxie4c for report, Thomas Kremer for fix
 
 0.72 2022-01-09
 - re-enable glutCloseFunc
